--- a/02_data_structure.ipynb
+++ b/02_data_structure.ipynb
@@ -247,6 +247,42 @@
     "print(\"After removing 2:\", my_set)\n",
     "print(\"dublicate value not allowed in set\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b9fe76a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'city:vapi', 'name:varun', 'phone:90445083', 'area:bhilad'}\n",
+      "<class 'set'>\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'set' object does not support item assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[13]\u001b[39m\u001b[32m, line 7\u001b[39m\n\u001b[32m      5\u001b[39m \u001b[38;5;28mprint\u001b[39m(dic)\n\u001b[32m      6\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(dic))\n\u001b[32m----> \u001b[39m\u001b[32m7\u001b[39m \u001b[43mdic\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mname\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m]\u001b[49m =\u001b[33m\"\u001b[39m\u001b[33mwaseem\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      8\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33mprint Name:\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mTypeError\u001b[39m: 'set' object does not support item assignment"
+     ]
+    }
+   ],
+   "source": [
+    "#------------dictionary------------------------\n",
+    "dic ={\"name:varun\",\"city:vapi\",\n",
+    "      \"area:bhilad\",\n",
+    "      \"phone:90445083\"}\n",
+    "print(dic)\n",
+    "print(type(dic))\n",
+    "print(\"print Name:\")"
+   ]
   }
  ],
  "metadata": {
